bugfix/data integrity